fix: restore smooth combat-to-ambient transitions